<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2283ce"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adrianmoseley.servicefeescalculator.StripeActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/stripe_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/stripeIMG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/stripe_transparent_white" />

            <TextView
                android:id="@+id/stripe_amountlbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/payPalTitlelbl"
                android:layout_gravity="center_horizontal"
                android:text="@string/amountlbl"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/stripeAmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/square_amountlbl"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:singleLine="false" />

            <TextView
                android:id="@+id/stripeRatelbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payPalAmountEditText"
                android:layout_gravity="center_horizontal"
                android:text="@string/striperate"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chargethecustomer"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/payPalFinalLargeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stripe_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stripefees"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/stripeFeesLargeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/stripecalculateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate" />

                <Button
                    android:id="@+id/stripeclearbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/payPalFinalEditText"
                    android:layout_alignEnd="@+id/payPalFinalEditText"
                    android:layout_alignRight="@+id/payPalFinalEditText"
                    android:nestedScrollingEnabled="true"
                    android:text="Clear" />


            </LinearLayout>

            <TextView
                android:id="@+id/stripedisclaimer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/stripbtn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/stripbtn"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:text="@string/purpose"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
